<resources>
    <string name="app_name">ClubMercado</string>

    <!-- Screen titles -->
    <string name="header_recepcion">RECEPCIÓN PRODUCTOS PROVEEDOR</string>
    <string name="header_dashboard">DASHBOARD</string>
    <string name="inicio_sesion">INICIO DE SESIÓN</string>
    <string name="punto_de_entrega">PDE</string>
    <string name="calendario_compras">Calendario Compras</string>
    <string name="compras_dia">Compras del día - 15/08/2017</string>
    <string name="session_init">Inicio de Sesión</string>
    <string name="purchase">Compra</string>
    <string name="purchase_participants">Participantes en compra</string>
    <string name="header_day_participations">Participante - Participaciones del día</string>
    <string name="header_transmit_data">Transmitir información compra</string>
    <string name="receive_products_supplier">Recepción productos proveedor</string>
    <string name="return_supplier_product">Devolución productos proveedor</string>



    <!-- Text labels -->
    <string name="fecha">Fecha</string>
    <string name="compra">Compra</string>
    <string name="sign_up">¿No tienes cuenta? REGISTRATE</string>
    <string name="forgot_password">¿Olvidaste contraseña?</string>
    <string name="select">Seleccione</string>
    <string name="hour">Hora</string>
    <string name="buy_selection">Compra/Colección</string>
    <string name="state">Estado</string>
    <string name="participants">Participantes</string>
    <string name="number">No</string>
    <string name="participant_and_phone">Participante/telefono</string>
    <string name="participations">Participaciones</string>
    <string name="phone">Teléfono</string>
    <string name="participant">Participante</string>
    <string name="products">Productos</string>
    <string name="product">Producto</string>
    <string name="participant_phone">Participante/Teléfono</string>
    <string name="pending_retrieval">Pendiente x retirar</string>
    <string name="phone_abb">Telf</string>
    <string name="units_abb">Unds</string>
    <string name="SMS">SMS</string>
    <string name="email">e-mail</string>
    <string name="purchases">Productos</string>
    <string name="participation_auth_products">Participación/Autorización/Productos</string>
    <string name="authorized">Autorizada</string>
    <string name="delivered">Entregado</string>
    <string name="qty_asked">Cantidad pedida</string>
    <string name="qty_delivered">Cantidad entregada</string>
    <string name="supplier">Proveedor</string>
    <string name="solicited">Solicitado</string>
    <string name="received">Recibido</string>
    <string name="UDM">UDM</string>
    <string name="price_bs">Precio Bs</string>


    <!-- Button titles -->
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="join">Únete</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="calendar">Calendario</string>
    <string name="downloaded_data">Datos bajados</string>
    <string name="purchase_reception">Recepción compra</string>
    <string name="returns">Devolución proveedor</string>
    <string name="previous_prep">Preparación previa</string>
    <string name="waste">Desperdicio</string>
    <string name="delivery_prep">Preparación entregas</string>
    <string name="delivery_participants">Entrega a participantes</string>
    <string name="no_accept">No aceptación</string>
    <string name="day_purchase">Compras del día</string>
    <string name="transmit_purchase">Transmitir compra</string>
    <string name="send_message">Enviar</string>
    <string name="transmit_button1">Facturas y Recepción Enviadas</string>
    <string name="transmit_button2">Enviando Entregas Participantes</string>
    <string name="transmit_button3">Borrar Compra del Móvil</string>
    <string name="receive_button1">Orden de Compra\nProducto a Recibir de proveedor</string>
    <string name="receive_button2">Participaciones - Picking</string>
    <string name="receive_button3">Actualizar Base de Datos Local</string>


    <!-- Hints -->
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_item_type">TODAS</string>
    <string name="search">Buscar</string>


    <!-- Placeholders -->
    <string name="pde_placeholder">Chacao - Vallis</string>
    <string name="fecha_placeholder">25/08/2017</string>
    <string name="all_placeholder">Todas</string>
    <string name="hour_placeholder">03:25 PM</string>
    <string name="collection_placeholder">Coleccion Veggies</string>
    <string name="reception_placeholder">Recepción</string>
    <string name="preparation_placeholder">Preparación</string>
    <string name="delivery_placeholder">Entrega</string>
    <string name="phone_placeholder">0414 4199040</string>
    <string name="purchase_id_placeholder">80165</string>
    <string name="veggie_disjobel_placeholder">Veggie/Disjobel</string>
    <string name="qty_placeholder">0,50 Kg</string>
    <string name="name_placeholder">Andrés Tirado</string>
    <string name="product_placeholder">Aguacate Polo Verde</string>


    <!-- Content Descriptors -->
    <string name="calendar_icon">Calendar icon</string>
    <string name="session_init_icon">Session Init icon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
