<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.analiticom.clubmercado.Calendar">

    <RelativeLayout
        android:id="@+id/header_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/header_end_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dp"
            android:textAllCaps="true"
            android:text="@string/calendario_compras"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            android:src="@drawable/calendar_icon"
            android:contentDescription="@string/calendar_icon"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/bottom_line"
        android:layout_below="@id/header_end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/select"
            android:layout_alignBaseline="@+id/spinner_item_type"
            android:id="@+id/label_item_type"
            android:textColor="@color/colorDarkGray"
            android:textStyle="bold" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp"
            android:background="@drawable/rounded_corners_transparent"
            android:layout_toEndOf="@id/label_item_type"
            android:id="@id/spinner_item_type"
            android:text="@string/all_placeholder"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/fecha"
            android:layout_alignBaseline="@id/spinner_item_type"
            android:id="@+id/event_date_label"
            android:layout_toStartOf="@+id/event_date"
            android:textColor="@color/colorDarkGray"
            android:textStyle="bold" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp"
            android:background="@drawable/rounded_corners_transparent"
            android:layout_alignParentEnd="true"
            android:id="@id/event_date"
            android:text="@string/fecha_placeholder"/>
    </RelativeLayout>

</RelativeLayout>
