<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/full_screen"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.analiticom.clubmercado.PurchaseParticipants">
    <RelativeLayout
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background">

        <TextView
            android:id="@+id/header_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="3dp"
            android:text="@string/purchase_participants"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="@dimen/header_textsize" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/header_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/header_title">

        <TextView
            android:id="@+id/header_pde_title"
            android:labelFor="@+id/header_pde_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:text="@string/punto_de_entrega"
            android:textColor="@color/colorDarkGray" />

        <TextView
            android:id="@+id/header_pde_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/header_pde_title"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounded_corners_light_blue"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="@string/pde_placeholder"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/header_fecha_title"
            android:labelFor="@+id/header_fecha_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/header_fecha_text"
            android:layout_alignBaseline="@+id/header_pde_title"
            android:layout_centerVertical="true"
            android:text="@string/fecha"
            android:textColor="@color/colorDarkGray" />

        <TextView
            android:id="@+id/header_fecha_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:maxLength="10"
            android:gravity="center"
            android:background="@drawable/rounded_corners_light_blue"
            android:text="@string/fecha_placeholder"
            android:textColor="@color/colorBlack"
            android:padding="5dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/full_screen"
        app:layout_constraintLeft_toLeftOf="@id/full_screen"
        android:id="@+id/purchase_id_container"
        android:background="@drawable/bottom_line"
        android:padding="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/header_body">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_weight="0.25"
            android:text="@string/purchase"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_weight="0.25"
            android:background="@drawable/rounded_corners_light_blue"
            android:text="@string/purchase_id_placeholder" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line"
            android:layout_weight="0.7"
            android:padding="3dp"
            android:text="@string/veggie_disjobel_placeholder"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/full_screen"
        app:layout_constraintLeft_toLeftOf="@id/full_screen"
        android:id="@+id/participant_searchbar"
        android:padding="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/purchase_id_container">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_weight="0.25"
            android:text="@string/participant"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_weight="0.25"
            android:background="@drawable/rounded_corners_transparent"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_corners_light_blue"
                android:text="16"/>
        </RelativeLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_weight="0.25"
            android:text="@string/participants"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/participant_titles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="@id/full_screen"
        app:layout_constraintLeft_toLeftOf="@id/full_screen"
        app:layout_constraintTop_toBottomOf="@id/participant_searchbar">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1.3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/number"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/participant_phone"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/state"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/participant_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="@id/full_screen"
        app:layout_constraintLeft_toLeftOf="@id/full_screen"
        app:layout_constraintTop_toBottomOf="@id/participant_titles">

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/footer"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintRight_toRightOf="@id/full_screen"
        app:layout_constraintLeft_toLeftOf="@id/full_screen"
        app:layout_constraintTop_toBottomOf="@id/participant_container">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="5dp"
                android:background="@drawable/rounded_corners_gray"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:text="@string/purchase"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="5dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corners_green"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:text="@string/send_message"/>
        </RelativeLayout>


        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/SMS"/>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/email"/>


    </LinearLayout>



</android.support.constraint.ConstraintLayout>
