<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.analiticom.clubmercado.Landing">

    <RelativeLayout
        android:id="@+id/header_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background">

        <TextView
            android:id="@+id/header_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="3dp"
            android:text="@string/header_dashboard"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/header_textsize"
            android:visibility="invisible"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/landing_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_title"
        android:src="@drawable/landing_image" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/join"
            android:background="@drawable/rounded_corners_green"
            android:textColor="@color/colorAccent"/>
        <Button
            android:id="@+id/init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/iniciar_sesion"
            android:background="@drawable/rounded_corners_blue"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</RelativeLayout>
